# ChatOnLine

./: .gitignore  README.md
ChatOnlineServer/: CMakeLists.txt  abstract_handle.h  chatmessage.cpp  chatmessage.h  handle.cpp  handle.h  main.cpp  server.cpp  server.h  user.h
document/: chatonline.odt
test/: parsejson.cpp  test_msg.rb  test_msg2.rb  test_press.rb
